# i.elg.gg

./: .gitignore  Cargo.toml
https-redirect/src/: main.rs
web/: Cargo.toml  Rocket.toml
web/src/: main.rs  upload.rs
web/static/: 404.html  style.css  upload.html  upload.js
web/static/resources/css/: electrolize.css
