[package]
name = "web"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["tls", "json"] }
dotenvy = "0.15.7"
reqwest = "0.11.22"
subtle = "2.5.0"
serde = "1.0.193"
